--- a/templates/search.html
+++ b/templates/search.html
@@ -16,7 +16,8 @@
         <input type="submit" value="Поиск">
     </form>
     {% if requestGET %}
-        <input type="submit" value="Экспорт">
+        <form action="getcsv" method="POST">{% csrf_token %}<input type="submit" value="Экспорт"></form>
+
         <div id="result">
             {% if Result  %}
                 <table>
