add nowarp in date field in search.html

--- a/templates/search.html
+++ b/templates/search.html
@@ -37,7 +37,7 @@
                                 <td>{{ ResItem.Name }}</td>
                                 <td>{{ ResItem.Project }}</td>
                                 <td>{{ ResItem.Developer }}</td>
-                                <td>{{ ResItem.CreatingDate }}</td>
+                                <td nowrap>{{ ResItem.CreatingDate }}</td>
                                 <td>{{ ResItem.Note }}</td>
                             </tr>
                         {% endfor %}
